--- a/Dandelion/Info.plist
+++ b/Dandelion/Info.plist
@@ -16,5 +16,7 @@
 		<string>PlayfairDisplay-Italic.ttf</string>
 		<string>PlayfairDisplay-Regular.ttf</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string></string>
 </dict>
 </plist>
